<resources>
    <string name="app_name">AircraftWar</string>
    <string name="mode1">简单模式</string>
    <string name="mode2">普通模式</string>
    <string name="mode3">困难模式</string>
    <string name="sound">音效</string>
    <string name="modeChoose">难度选择</string>
    <string name="SoundIcon">音效图标</string>
    <string name="rankingList">分数排行榜</string>
    <string name="username">用户名</string>
    <string name="score">分数</string>
    <string name="record">记录分数</string>
    <string name="delete">删除记录</string>
    <string name="aircraftWar">飞机大战</string>
    <string name="startGame">开始游戏</string>
    <string name="login">登录</string>
    <string name="showRanking">显示排行榜</string>
    <string name="signup">注册新账号</string>
    <string name="setServer">设置服务器地址</string>
    <string name="back">返回</string>
</resources>