<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AED6F1"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="105dp"
        android:layout_height="40dp"
        android:text="@string/modeChoose"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode2"
        tools:layout_editor_absoluteX="160dp"
        tools:layout_editor_absoluteY="341dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="341dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode1"
        tools:layout_editor_absoluteX="160dp"
        tools:layout_editor_absoluteY="258dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="258dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode3"
        tools:layout_editor_absoluteX="160dp"
        tools:layout_editor_absoluteY="425dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="425dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch1"
        android:layout_width="97dp"
        android:layout_height="48dp"
        android:layout_marginStart="264dp"
        android:layout_marginTop="516dp"
        android:text="@string/sound"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

</androidx.constraintlayout.widget.ConstraintLayout>