<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/picture"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_startgame"
        style="@style/StartButton"
        android:text="@string/startGame"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="130dp"
        android:layout_marginTop="204dp" />

    <Button
        android:id="@+id/button_login"
        style="@style/StartButton"
        android:layout_width="160dp"
        android:layout_height="52dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="296dp"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_signup"
        style="@style/StartButton"
        android:layout_width="160dp"
        android:layout_height="52dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="392dp"
        android:text="@string/signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_showranking"
        style="@style/StartButton"
        android:layout_width="160dp"
        android:layout_height="52dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="484dp"
        android:text="@string/showRanking"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/setServer"
        style="@style/StartButton"
        android:layout_width="161dp"
        android:layout_height="70dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="576dp"
        android:text="@string/setServer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/webState"
        android:layout_width="109dp"
        android:layout_height="31dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="4dp"
        android:text="状态：离线"
        android:textSize="15sp"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username"
        android:layout_width="150dp"
        android:layout_height="29dp"
        android:layout_marginStart="236dp"
        android:layout_marginTop="4dp"
        android:text="用户名：游客"
        android:textSize="15sp"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>